--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -36,3 +36,6 @@ steps:
     repository: 'shadrach85/mycontainer'
     command: 'buildAndPush'
     Dockerfile: 'Dockerfile'
+    tags: |
+      $(tag)
+      latest
