Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -37,6 +37,4 @@ steps:
     command: 'buildAndPush'
     Dockerfile: 'Dockerfile'
     containerRegistry: 'dockertest'
-    tags: |
-      $(tag)
-      latest
+    tags: latest
