--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,7 +16,4 @@ steps:
 - template: Gradle.yaml
 #- template: sonar.yaml
 #- template: container.yaml
-- task: PublishCodeCoverageResults@1
-  inputs:
-    codeCoverageTool: 'JaCoCo'
-    summaryFileLocation: ./test
+- template: test.yaml
