--- a/artifact.yaml
+++ b/artifact.yaml
@@ -2,5 +2,6 @@ steps:
 - task: PublishBuildArtifacts@1
   inputs:
     PathtoPublish: '$(Build.ArtifactStagingDirectory)'
-    ArtifactName: 'drop'
-    publishLocation: 'Container'
+    ArtifactName: '*.jar'
+    publishLocation: 'FilePath'
+    TargetPath: './build/libs/'
