Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,6 +14,8 @@ variables:
 
 steps:
 - template: Gradle.yaml
+  parameters: 
+    cliProjectKey: 'migra2356_Sampleproject_AYLPL14qVoNnHTT-c7K4'
 - template: sonar.yaml
 - template: container.yaml
 - template: test.yaml
