--- a/kube.yaml
+++ b/kube.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: my-springboot-app
-        image: shadrach85/mycontainer:115
+        image: shadrach85/mycontainer:latest
         imagePullPolicy: Always
         ports:
         - containerPort: 8080
